--- a/css/land.css
+++ b/css/land.css
@@ -4,6 +4,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  min-width: 500px;
 }
 
 .sign-form-container {
